Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140780

Setting Sphere Geometry pickable: true, causes crash in Quick 3D

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.11, 6.8.6, 6.10.1, 6.11.0 FF
    • 6.9.3
    • Quick: 3D
    • None
    • Windows 11, Pyside6-6.9.3
    • Windows
    • 586d1fcd4 (dev), 4ab10547d (6.10), 8ce2f5f4e (tqtc/lts-6.8), 4ea86c444 (tqtc/lts-6.5)

      1. What did I do?

      Using Pyside and QML I created a view3D with a camera and a simple sphere Model created using SphereGeometry from  QtQuick3D.Helpers. The model was then set as pickable.

      2. What did i excpect to happen? 
      I excpected the sphere Model to become pickable.

      3. What happened instead?

      Right after launching the script QML crashes with:

      Windows fatal exception: access violation

      Thread 0x00000948 (most recent call first):

      If I set pickable to false the script no longer crashes and the sphere renders as excpected.

      This happens both in QT Creator and when running from VS Code or terimanl.

      Code and log attached

        1. main.py
          0.3 kB
        2. main.qml
          1 kB
        3. qt_debug_output.txt
          56 kB
        For Gerrit Dashboard: QTBUG-140780
        # Subject Branch Project Status CR V

            jokarlss Jonas Karlsson
            vinny_2 Geir Stuesen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes